--- a/index.html
+++ b/index.html
@@ -1,72 +1,89 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Home : Cydija Homepage">
+    <title>Home by LayALAD</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Home</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Home</h1>
+        <p>Cydija Homepage</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/LayALAD/home">View on GitHub</a>
+        <p class="view"><a href="https://github.com/LayALAD/home">View the Project on GitHub <small>LayALAD/home</small></a></p>
 
-          <h1 id="project_title">Home</h1>
-          <h2 id="project_tagline">Cydija Homepage</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/LayALAD/home/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/LayALAD/home/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
+        <ul>
+          <li><a href="https://github.com/LayALAD/home/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/LayALAD/home/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/LayALAD/home">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <p>&lt;!DOCTYPE html&gt;
+
+</p>
+  Reposi3
+  
+  
+  
+  
+
+
+
+<div>
+    <h1>
+<a id="-reposi3" class="anchor" href="#-reposi3" aria-hidden="true"><span class="octicon octicon-link"></span></a><img src="CydiaIcon.png"> Reposi3</h1>
+</div>
+
+<div>
+    <div>
+        <p><b>Reposi3</b> is a Cydia repository template.</p>
+        Add to Cydia
     </div>
+</div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<div>
+  <h3 id="wells">
+<a id="hosted-packages" class="anchor" href="#hosted-packages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hosted Packages</h3>
+</div>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you're using GitHub for Mac or GitHub for Windows, simply sync your repository and you'll see the new branch.</p>
+<div>
+    <div>
+      <div>Old Package</div>
+      <div>
+        This is a sample package with minimal information. 
+        It also simulates an old package that's incompatible only with iOS lower than 7.0.<br><br>
+        <a href="depictions/?p=com.supermamon.oldpackage">More info</a>
+      </div>
+    </div>
+    
+    <div>
+      <div>New Package</div>
+      <div>
+        This is a sample package with lots of information.<br><br>
+        <a href="depictions/?p=com.supermamon.newpackage">More info</a>
+      </div>
+    </div>
+</div>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>
+</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Home maintained by <a href="https://github.com/LayALAD">LayALAD</a></p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/LayALAD">LayALAD</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
